--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "maxmind-db/reader": "~1.0",
-        "maxmind/web-service-common": "~0.3",
+        "maxmind/web-service-common": "dev-greg/osx-securetransport-fix",
         "php": ">=5.3.1"
     },
     "require-dev": {
